# singularity

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MEMORY.md  README.md  pyproject.toml
examples/: simple_agent.py
singularity/: __init__.py  action_summarizer.py  adaptive_executor.py  agent_profile.py  autonomous_agent.py  cli.py  cognition.py  context.py  execution.py  execution_guard.py  execution_tracker.py  insights.py  interactive_agent.py  lifecycle.py  llm_retry.py  loop_detector.py  prompt_cache.py  service_api.py  skill_health.py
src/: brama.rs  config.rs  domain.rs  error.rs  lib.rs
tests/: conftest.py  test_action_callbacks.py  test_action_summarizer.py  test_adaptive_circuit_thresholds.py  test_adaptive_executor.py  test_adaptive_skill_loader.py  test_agent.py  test_agent_meta_skill.py  test_agent_profile.py  test_agent_reflection.py  test_agent_reputation.py  test_api.py  test_auto_playbook_generation.py  test_auto_reputation_wiring.py  test_autonomous_agent.py  test_billing_pipeline.py  test_browser_skill.py  test_budget_planner.py  test_circuit_adaptive_integration.py  test_circuit_breaker.py  test_cli.py  test_code_analysis.py  test_cognition_engine.py  test_cognition_fixes.py  test_cognition_improvements.py  test_cognition_types.py  test_consensus.py  test_consensus_task_assignment.py  test_context.py  test_conversation_memory.py  test_cost_optimizer.py  test_dashboard_observability_bridge.py  test_database_migration.py  test_diagnostics_skill.py  test_event_workflow.py  test_execution_engine.py  test_execution_guard.py  (+57 more)
wisentbot/: agent.py  (+5 more)
(+215 files in other folders)
